@@ -3,7 +3,6 @@ class CreateCommitService
     before_sha = params[:before]
     sha = params[:checkout_sha] || params[:after]
     origin_ref = params[:ref]
-    yaml_config = params[:ci_yaml_file] || project.generated_yaml_config
     
     unless origin_ref && sha.present?
       return false
@@ -34,7 +33,7 @@ class CreateCommitService
           repository: params[:repository],
           commits: params[:commits],
           total_commits_count: params[:total_commits_count],
-          ci_yaml_file: yaml_config
+          ci_yaml_file: params[:ci_yaml_file]
         }
       }
 
